@@ -18,6 +18,7 @@ S3method(as.vector,numpy.ndarray)
 S3method(length,python.builtin.dict)
 S3method(plot,numpy.ndarray)
 S3method(print,py_config)
+S3method(print,py_wrapper)
 S3method(print,python.builtin.iterator)
 S3method(print,python.builtin.object)
 S3method(py_str,default)
@@ -40,6 +41,8 @@ export(py_call)
 export(py_capture_output)
 export(py_config)
 export(py_discover_config)
+export(py_function_docs)
+export(py_function_wrapper)
 export(py_get_attr)
 export(py_has_attr)
 export(py_is_null_xptr)
